--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,10 @@
         </title>
     </head>
     <body>
-        <div>Libraraya: <a href="/index">Home</a></div>
+        <div> Libraraya:
+            <a href="/index">Home</a>
+            <a href="/login">Login</a>
+        </div>
         <hr>
         {% block content %}{% endblock %}
     </body>
