--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,10 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+{% endblock %}
+
 {% block title %}
     {% if title %}{{ title }} - Libraraya{% else %}Welcome to Libraraya{% endif %}
 {% endblock %}
