--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,15 +1,18 @@
 <table class="table table-hover">
     <tr>
-        <td width="70px">
+        <td>
             <a href="{{ url_for('user_page', username=post.author.username) }}">
-                <img src="{{ post.author.avatar(70) }}" />
+                <img alt="{{ _('Author avatar') }}" src="{{ post.author.avatar(70) }}" />
             </a>
         </td>
         <td>
-            <a href="{{ url_for('user_page', username=post.author.username) }}">
-                {{ post.author.username }}
-            </a>
-            said: {{ moment(post.timestamp).fromNow() }};
+            {% set user_link %}
+                <a href="{{ url_for('user_page', username=post.author.username) }}">
+                    {{ post.author.username }}
+                </a>
+            {% endset %}
+            {{ _('%(username)s said %(when)s',
+                username=user_link, when=moment(post.timestamp).fromNow()) }}
             <br>
             {{ post.body }}
         </td>
